# QHI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_PUSH_GUIDE.md  README.md  demo_ai_responses.json  push_to_github.bat  push_to_github.sh  pyproject.toml  requirements.txt  run_benchmark.py  setup.py  test_real_ai.py
assets/: qhi_workflow_react.jsx
data/: loader.py
docs/: ai_testing_guide.md  architecture.md
examples/: compare_models.py  quickstart.py
qhi_probe/: __init__.py  _internals.py  model.py
results/: benchmark_results.json
tests/: test_system.py
