[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qhi-probe"
version = "0.1.0"
description = "Quantified Hallucination Index for Clinical LLMs via Sparse Entity-Conditioned Probing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Pranav" }
]
keywords = [
    "hallucination", "clinical NLP", "LLM safety",
    "medical AI", "probing", "interpretability",
    "patient safety", "ISO 14971"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
datasets = ["datasets>=2.0.0"]
transformers = ["transformers>=4.30.0", "torch>=2.0.0"]
quantized = ["bitsandbytes>=0.41.0"]
ner = ["scispacy>=0.5.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
all = [
    "datasets>=2.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/qhi-probe"
Repository = "https://github.com/YOUR_USERNAME/qhi-probe"
Issues = "https://github.com/YOUR_USERNAME/qhi-probe/issues"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
